# s2d

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: publish.yml
src/: config.rs  main.rs  models.rs
