[package]
name = "s2d"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
log = "0.4.0"
env_logger = "0.6.1"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
webhook = "2.1.2"
rand = "0.8.5"

[dependencies.confy]
version = "0.6.1"
features = ["yaml_conf"]
default-features = false